// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentsPage No data view should be rendered 1`] = `
<div>
  <main
    class="layout"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/cf/orgs/dummy/projects/dummy"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="cf-main"
                >
                  <svg
                    height="16"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.464 1.316a.2.2 0 00.207-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.397 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012L10.633 2.08z"
                      fill="url(#cf-main_svg__a)"
                    />
                    <path
                      d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.266.902z"
                      fill="url(#cf-main_svg__b)"
                    />
                    <defs>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="cf-main_svg__a"
                        x1="6.837"
                        x2="23.78"
                        y1="2"
                        y2="28.227"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="cf-main_svg__b"
                        x1="6.837"
                        x2="23.78"
                        y1="2"
                        y2="28.227"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                    </defs>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  dummy
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
          level="2"
        >
          cf.shared.targetManagement: cf.shared.segments
        </h2>
      </div>
      <ul
        class="wrapper"
        data-testid="CFSectionToggle"
      >
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/targets?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_targets_heading"
            >
              cf.shared.targets
            </span>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/target-groups?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_segments_heading"
            >
              cf.shared.segments
            </span>
          </a>
        </li>
      </ul>
      <div
        data-testid="CFTargetManagementHeaderSpacer"
        style="width: 325px;"
      />
    </div>
    
    <div
      class="content"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        style="width: 100%; height: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center"
          style="width: 540px;"
        >
          <img
            alt=""
            data-testid="nodata-image"
            height="220"
            src="test-file-stub"
            width="320"
          />
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <h2
                class="StyledProps--font StyledProps--font-h2 StyledProps--main centerAlign StyledProps--font-variation-h4 StyledProps--color StyledProps--color-grey600"
                level="2"
              >
                cf.segments.noSegment
              </h2>
            </div>
          </div>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cf.segments.create
            </span>
          </button>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`SegmentsPage No environment view should be rendered 1`] = `
<div>
  <main
    class="layout"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/cf/orgs/dummy/projects/dummy"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="cf-main"
                >
                  <svg
                    height="16"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.464 1.316a.2.2 0 00.207-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.397 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012L10.633 2.08z"
                      fill="url(#cf-main_svg__a)"
                    />
                    <path
                      d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.266.902z"
                      fill="url(#cf-main_svg__b)"
                    />
                    <defs>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="cf-main_svg__a"
                        x1="6.837"
                        x2="23.78"
                        y1="2"
                        y2="28.227"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="cf-main_svg__b"
                        x1="6.837"
                        x2="23.78"
                        y1="2"
                        y2="28.227"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                    </defs>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  dummy
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
          level="2"
        >
          cf.shared.targetManagement: cf.shared.segments
        </h2>
      </div>
      <ul
        class="wrapper"
        data-testid="CFSectionToggle"
      >
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/targets?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_targets_heading"
            >
              cf.shared.targets
            </span>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/target-groups?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_segments_heading"
            >
              cf.shared.segments
            </span>
          </a>
        </li>
      </ul>
      <div
        data-testid="CFTargetManagementHeaderSpacer"
        style="width: 325px;"
      />
    </div>
    <div
      class="content"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        style="height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex"
          style="flex-direction: column;"
        >
          <img
            height="220"
            src="test-file-stub"
            width="220"
          />
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
            style="padding-top: 50px; font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(34, 34, 42);"
          >
            cf.noEnvironment.title
          </h2>
          <p
            class="StyledProps--font StyledProps--main"
            style="line-height: 18px; color: rgb(34, 34, 42); text-align: center; width: 400px;"
          >
            cf.noEnvironment.message
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-top-small StyledProps--padding-bottom-small StyledProps--padding-left-huge StyledProps--padding-right-huge Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cf.environments.create.title
            </span>
          </button>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`SegmentsPage SegmentsPage should render data correctly 1`] = `
<div>
  <main
    class="layout"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/cf/orgs/dummy/projects/dummy"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="cf-main"
                >
                  <svg
                    height="16"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.464 1.316a.2.2 0 00.207-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.397 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012L10.633 2.08z"
                      fill="url(#cf-main_svg__a)"
                    />
                    <path
                      d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.266.902z"
                      fill="url(#cf-main_svg__b)"
                    />
                    <defs>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="cf-main_svg__a"
                        x1="6.837"
                        x2="23.78"
                        y1="2"
                        y2="28.227"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="cf-main_svg__b"
                        x1="6.837"
                        x2="23.78"
                        y1="2"
                        y2="28.227"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                    </defs>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  dummy
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
          level="2"
        >
          cf.shared.targetManagement: cf.shared.segments
        </h2>
      </div>
      <ul
        class="wrapper"
        data-testid="CFSectionToggle"
      >
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/targets?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_targets_heading"
            >
              cf.shared.targets
            </span>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/target-groups?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_segments_heading"
            >
              cf.shared.segments
            </span>
          </a>
        </li>
      </ul>
      <div
        data-testid="CFTargetManagementHeaderSpacer"
        style="width: 325px;"
      />
    </div>
    <div
      class="Layout--horizontal StyledProps--main PageSubHeader--container toolbar StyledProps--flex"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cf.segments.create
          </span>
        </button>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey400"
          style="align-self: center;"
        >
          cf.segments.pageDescription
        </p>
      </div>
      <div
        class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
        data-name="findFlag"
      >
        <span
          class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
          data-icon="thinner-search"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <input
          class="bp3-input  ExpandingSearchInput--filter"
          dir="auto"
          placeholder="search"
          style="padding-right: 38px;"
          type="search"
          value=""
        />
      </div>
    </div>
    <div
      class="content"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium StyledProps--padding-right-xlarge StyledProps--padding-left-xlarge"
      >
        <div
          class="TableV2--table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 35%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                CF.SHARED.SEGMENT
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 35%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 30%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                CF.TARGETS.CREATEDDATE
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card TableV2--clickable"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 35%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                  style="align-items: center;"
                >
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
                  >
                    <ul
                      class="stack"
                      style="--size: 30px; --itemContainerSize: 30px;"
                    >
                      <li
                        class="itemContainer"
                        style="--color: var(--white); --background: #BDA5F2;"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          SE
                        </p>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                      style="font-weight: 600; line-height: 24px; color: rgb(34, 34, 42);"
                    >
                      segment1
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 35%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  segment1
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 30%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-align-center-center"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    dummy date
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="text-align: right;"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                          type="button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="Options"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 4 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="footer"
    />
  </main>
</div>
`;
